--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Creative Sites by [Your Name]</h1>
+    <h1>Creative Sites by Heather</h1>
     <p>Custom, professional websites for job seekers, creatives, and small businesses.</p>
     <nav>
       <ul>
