--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
     <p>I’m a designer who loves helping people put their best foot forward online. Whether you're launching a job search or building your brand, I make it easy to get a site you're proud to share.</p>
   </section>
 
-  <section id="contact">
-    <h2>Get Started</h2>
-    <p>Fill out the <a href="https://forms.office.com/" target="_blank">website request form</a> to begin. After submission, I’ll send you a follow-up email and upload link.</p>
-    <p>Email: your.email@example.com</p>
-  </section>
+<section id="contact">
+  <h2>Get Started</h2>
+  <p>Fill out the request form to begin. After submission, I’ll send you a follow-up email and upload link.</p>
+  <a href="https://forms.office.com/" target="_blank" class="cta-button">Request a Website</a>
+  <p>Email: your.email@example.com</p>
+</section>
 
   <footer>
     <p>&copy; 2025 Creative Sites by [Your Name]</p>
