--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </section>
 
   <footer>
-    <p>&copy; 2025 Creative Sites by [Your Name]</p>
+    <p>&copy; 2025 Creative Sites by Heather</p>
   </footer>
 </body>
 </html>
