--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Creative Sites by Heather</title>
+  <title>BrightPath Web Design</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Creative Sites by Heather</h1>
+    <h1>BrightPath Web Design</h1>
     <p>Custom, professional websites for job seekers, creatives, and small businesses.</p>
     <nav>
       <ul>
@@ -23,15 +23,15 @@
   <section id="services">
     <h2>Services</h2>
     <div class="service">
-      <h3>Starter Site</h3>
+      <h3>The Launchpad</h3>
       <p>Perfect for job seekers – includes a homepage, resume section, and contact form.</p>
     </div>
     <div class="service">
-      <h3>Professional Portfolio</h3>
+      <h3>Career Catalyst</h3>
       <p>Great for creatives and consultants – showcase your projects and skills.</p>
     </div>
     <div class="service">
-      <h3>Custom Web Presence</h3>
+      <h3>Masterplan</h3>
       <p>Tailored websites for small businesses or anyone needing something unique.</p>
     </div>
   </section>
