--- a/index.html
+++ b/index.html
@@ -23,15 +23,21 @@
   <section id="services">
     <h2>Services</h2>
     <div class="service">
-      <h3>The Launchpad</h3>
-      <p>Perfect for job seekers – includes a homepage, resume section, and contact form.</p>
+      <h3>The Launchpad - $99</h3>
+      <p>Perfect for job seekers and early career professionals – includes a homepage, resume section, and contact form. 
+        What you get: 
+        Choose from 3 preset template options
+        Customize with your preferred colorschemes and vibe
+        one video consultation 
+        one post development update
+      </p>
     </div>
     <div class="service">
-      <h3>Career Catalyst</h3>
+      <h3>Career Catalyst - $275</h3>
       <p>Great for creatives and consultants – showcase your projects and skills.</p>
     </div>
     <div class="service">
-      <h3>Masterplan</h3>
+      <h3>Masterplan - $500</h3>
       <p>Tailored websites for small businesses or anyone needing something unique.</p>
     </div>
   </section>
@@ -41,9 +47,9 @@
     <p>See examples of templates and live sites I’ve created.</p>
     <!-- Placeholder for thumbnails or screenshots -->
     <div class="portfolio-grid">
-      <div class="project">Job Seeker Template</div>
-      <div class="project">Creative Portfolio</div>
-      <div class="project">Small Biz Site</div>
+      <div class="project">Launchpad Templates</div>
+      <div class="project">Career Catalyst Portfolios</div>
+      <div class="project">Masterplan Portfolios </div>
     </div>
   </section>
 
